Fjerner TOTRINN_TEMP_DEAKTIVERT toggle, og tilhørende kode